<resources>


    <!-- General -->

    <string name="app_name">VitaRun</string>
    <string name="left_fragment">Dashboard</string>
    <string name="centre_fragment">Run</string>
    <string name="right_fragment">Profile</string>
    <string name="connect">Connect</string>

    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <!-- Run Fragment -->

    <string name="start_run">Start running</string>
    <string name="latest_recommendations">Your Latest Recommendations:</string>


    <!-- Profile Fragment -->

    <string name="your_profile">Your Profile</string>

    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login">Log In</string>
    <string name="log_out">Log Out</string>


    <!-- LoginActivity Activity -->

    <string name="new_profile">Create Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_kg">Weight (kg)</string>

</resources>
